# pyClickMouse

./: .gitignore  README.md  clickMouse.h  features.md  makefile  pyproject.toml  requirements.txt  setup.py
Gui/: autoupdate.py  check_update.py  clean.py  init.py  install_pack.py  installer.py  log.py  main.py  parse_dev.py  qt.py  ramdoms.py  setup.py  sharelibs.py  uiStyles.py  uninstall.py  updater.py  version.py  xQklN2n.cp313-win_amd64.pyd  zip_json.py
Gui/docs/: md_to_html.py
Gui/docs/source/zh-cn/: contents.hhc  project.chm  project.hhp
Gui/docs/source/zh-cn/clickmouse maindocs/: clickmouse dev.htm  clickmouse user.htm  index.htm
Gui/docs/zh-cn/: project.chm  styles.css  welcome.htm
Gui/docs/zh-cn/clickmouse_packages/: index.htm  main.htm
Gui/docs/zh-cn/clickmouse_usage/: index.htm  main_ui.htm
Gui/docs/zh_cn/: contents.hhc  project.hhk  project.hhp
Gui/extension_dev/hello/: hello.py
Gui/inst_res/: LICENSE.txt
Gui/res/: dev_data.json  errnote.txt  examlekey.txt  init_langs.json  langs.json  package_info.json  versions.json
Gui/res/rules/: dev_data.json  vars.json
Gui/res/vars/: cache_list.json  cleancache.json  update_log.json
clickmouse_api/: README.md  api_package_format.json  pyproject.toml  setup.py
clickmouse_api/clickmouse_API/: __init__.py  __main__.py
clickmouse_api/clickmouse_API/GUI/: __init__.py  styles.py
clickmouse_api/clickmouse_API/packageParser/: __init__.py
cython/: main.py  setup.py
dll/: dllmain.cpp
