[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ClickMouse"
version = "2.1.0"
authors = [
    {name = "xystudio", email = "173288240@qq.com"},
]
description = "基于Python的鼠标连点工具"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["mouse", "click", "automation", "clickmouse"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyautogui",
]

[project.scripts]
pyplus = "pyplus_cmd:main"

[project.urls]
homepage = "https://github.com/xystudio889/pyClickMouse"